[package]
name = "rustorrent"
version = "0.1.0"
authors = ["CODESOLE"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"                                                  # error handling
rand = "*"
hex = "0.4.3"
reqwest = { version = "0.11.18", features = ["json", "blocking"] } # http requests
serde = { version = "1.0.136", features = ["derive"] }             # for json mangling
serde_json = "1.0.105"                                             # for json mangling
sha1 = "0.10.2"                                                    # hashing
thiserror = "1.0.38"                                               # error handling
